syntax = "proto3";

package protobuf.opencb.service;

option java_package = "org.opencb.cellbase.grpc.service";
option java_outer_classname = "GeneServiceModel";

import "protobuf/opencb/service/generic_service.proto";
import "protobuf/opencb/service_types.proto";
import "protobuf/opencb/gene.proto";
import "protobuf/opencb/transcript.proto";
import "protobuf/opencb/regulatory_region.proto";

service GeneService {

    rpc count(Request) returns (LongResponse) {}

    rpc distinct(Request) returns (StringArrayResponse) {}

    rpc first(Request) returns (Gene) {}

    rpc next(Request) returns (Gene) {}

    rpc get(Request) returns (stream Gene) {}

    rpc groupBy(Request) returns (GroupResponse) {}

    rpc getTranscripts(Request) returns (stream Transcript) {}

    rpc getRegulatoryRegions(Request) returns (stream RegulatoryRegion) {}

    rpc getTranscriptTfbs(Request) returns (stream TranscriptTfbs) {}

}
